--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/oikwsat/toy-tree#readme",
   "dependencies": {
+    "chalk": "^4.1.0",
     "meow": "^7.0.1"
   }
 }
