--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "bin": {
     "toy-tree": "src/bin.js"
   },
+  "jest": {
+    "setupFiles": ["./jest.setup.js"]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +26,8 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "meow": "^7.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.2.2"
   }
 }
