--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "toy-tree": "src/bin.js"
   },
   "jest": {
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   },
   "scripts": {
     "test": "jest"
@@ -28,6 +30,8 @@
     "meow": "^7.0.1"
   },
   "devDependencies": {
-    "jest": "^26.2.2"
+    "@types/node": "^14.0.27",
+    "jest": "^26.2.2",
+    "typescript": "^3.9.7"
   }
 }
