--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "ディレクトリ内をツリー表示するコマンド。WEB+DB PRESS Vol.117",
   "main": "index.js",
   "bin": {
-    "toy-tree": "src/bin.js"
+    "toy-tree": "dist/bin.js"
   },
   "jest": {
+    "preset": "ts-jest",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist"
+    ],
     "setupFiles": [
       "./jest.setup.js"
     ]
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -30,8 +35,10 @@
     "meow": "^7.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "jest": "^26.2.2",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   }
 }
