--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     ],
     "extends": [
       "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "prettier",
+      "prettier/@typescript-eslint"
     ],
     "rules": {
       "@typescript-eslint/no-explicit-any": 0,
@@ -32,7 +34,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint \"**/*.ts\""
+    "lint": "eslint \"**/*.ts\"",
+    "format": "prettier --write \"**/*.{js,ts,json,md}\""
   },
   "repository": {
     "type": "git",
@@ -55,7 +58,9 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
     "jest": "^26.2.2",
+    "prettier": "^2.0.5",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   }
